k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-ppp
  labels:
    name: devops-ppp
    environment: production
